--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,43 +3,43 @@
 }
 
 .chamado{
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bold;
     font-family: sans-serif;
     color: green;
-    margin: 5px 15px;
+    margin: 0.3125rem 0.9375rem;
 }
 
 .descricao{
-    font-size: 15px;
+    font-size: 0.9375rem;
     font-family: sans-serif;
     color: white;
-    margin-left: 20px;
+    margin-left: 1.25rem;
 }
 
 .subTitulo{
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: bold;
     font-family: sans-serif;
     color: white;
 }
 
 .campo{
-    margin: 5px 20px;
+    margin: 0.3125rem 1.25rem;
 }
 
 .texto{
-    font-size: 16px;
+    font-size: 1rem;
     font-family: sans-serif;
     color: white;
 }
 
 .preenche{
     color: whitesmoke;
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border: 3px solid blueviolet;
+    padding: 0.625rem;
+    margin: 0.625rem 0;
+    border-radius: 0.3125rem;
+    border: 0.1875rem solid blueviolet;
     -webkit-box-shadow: 0px 0px 10px 1px rgba(157,0,242,0.8);
     -moz-box-shadow: 0px 0px 10px 1px rgba(157,0,242,0.8);
     box-shadow: 0px 0px 10px 1px rgba(157,0,242,0.8);
@@ -47,33 +47,33 @@
 
 .preenche:hover{
     color: floralwhite;
-    padding: 10px;
-    border: 3px solid rgb(157, 32, 206);
+    padding: 0.625rem;
+    border: 0.1875rem solid rgb(157, 32, 206);
     -webkit-box-shadow: 0px 0px 10px 1px rgba(156,37,207,1);
     -moz-box-shadow: 0px 0px 10px 1px rgba(156,37,207,1);
     box-shadow: 0px 0px 10px 1px rgba(156,37,207,1);
 }
 
 .botao{
-    margin: 10px 0;
-    padding: 10px 25px;
-    font-size: 16px;
+    margin: 0.625rem 0;
+    padding: 0.625rem 1.5625rem;
+    font-size: 1rem;
     font-weight: 500;
     font-family: sans-serif;
     background-color: whitesmoke;
-    border: 3px solid rgb(104, 2, 187);
-    border-radius: 20px;
+    border: 0.1875rem solid rgb(104, 2, 187);
+    border-radius: 1.25rem;
     color: blueviolet;
 }
 
 .botao2{
-    margin: 0 25px;
+    margin: 0 1.5625rem;
 }
 
 .botao:hover{
     color: whitesmoke;
     background-color: rgb(154, 0, 205);
-    border: 3px solid whitesmoke;
+    border: 0.1875rem solid whitesmoke;
     -webkit-box-shadow: 0px 0px 10px 1px rgba(194,58,196,1);
     -moz-box-shadow: 0px 0px 10px 1px rgba(194,58,196,1);
     box-shadow: 0px 0px 10px 1px rgba(194,58,196,1);
@@ -86,7 +86,7 @@ body{
     grid-template-areas: 
     "header aside"
     "main aside";
-    grid-template-columns: 1fr 765px;
+    grid-template-columns: 1fr 745px;
 }
 
 header{
